# intellgraph

./: .gitattributes  .gitignore  .gitignore.swp  .gitmodules  AUTHOR.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  DEVELOPMENT_TUTORIAL.md  README.md  architecture.sketch  conanfile.txt  run.sh
cmake/: bazel.cmake
examples/: CMakeLists.txt  example1.h  example2.h  load_mnist_data.h  main.cc  mnist_classifier.h  simple_classifier.h
include/: act_loss_base_layer.h  act_loss_layer.h  activation_base_layer.h  activation_layer.h  auxiliary_cpp.h  base_layer.h  base_tube.h  classifier.h  common.h  dense_edge.h  dense_tube.h  edge.h  edge_factory.h  edge_headers.h  edge_registry.h  evaluable.h  feedable.h  graph.h  identity_l2_node.h  internal_representation.h  layer_parameter.h  linear_base_tube.h  nl_random.h  node.h  node_factory.h  node_parameter.h  node_registry.h  output_node.h  random.h  sigmoid_l2_node.h  sigmoid_layer.h  sigmoid_square_layer.h  system.h  test_base.h  test_derived.h  tube_parameter.h
include/edge/: edge_parameter.h
include/graph/: classifier.h  graphfxn.h
include/intellgraph/: edge.h  eigen.h  graph_builder.h  graph_impl.h  util.h
include/intellgraph/proto/: CTestTestfile.cmake  Makefile  edge_parameter.pb.h  vertex_parameter.pb.cc  vertex_parameter.pb.h
include/node/: estimator.h  identity_l2_node.h  node.h  node_headers.h  node_parameter.h  relu_node.h  sigmoid_node.h
include/solver/: stochastic_gradient_decent.h
include/utility/: random.h
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
python/.ipynb_checkpoints/: A simple neural network in python-checkpoint.ipynb
src/: CMakeLists.txt  any.h  boost.h  edge.h  factory.h  graph.h  logging.h  main.cc  main.cpp  registry.cc  solver.h  visitor.h
src/edge/: CMakeLists.txt  dense_edge.cc  dense_edge.h  dense_edge_impl.cc  dense_edge_impl.h  edge.cc  edge.h  edge_factory.h  edge_parameter.h  edge_registry.h  factory.h  input_vertex.h  op_vertex.h  output_edge.cc  output_edge.h  output_vertex.h  registry.cc  registry.h  seq_output.h  seq_vertex.h
src/edge/vertex/: CMakeLists.txt  cross_entropy.h  input_vertex.cc  input_vertex.h  input_vertex_impl.cc  input_vertex_impl.h  input_vertex_impl_test.cc  op_vertex_impl.cc  op_vertex_impl.h  op_vertex_impl_test.cc  output_vertex_impl.cc  output_vertex_impl.h  output_vertex_impl_test.cc  relu.h  relu_test.cc  seq_output_impl.cc  seq_output_impl.h  seq_vertex_impl.cc  seq_vertex_impl.h  sigmoid.h  sigmoid_l2.h  sigmoid_l2_test.cc  sigmoid_test.cc
src/engine/: CMakeLists.txt  graph_engine.cc  graph_engine.h  test.h
src/graph/: CMakeLists.txt  classifier.cc  classifier.h  classifier_builder.cc  classifier_builder.h  classifier_impl.cc  classifier_impl.h  graph.h  graph_builder.cc  graph_builder.h  graph_director.h  graph_impl.cc  graph_impl.h  graphfxn.cc  graphfxn.h  llvm_test.h  rnn_builder.cc  rnn_builder.h  rnn_graph.h  rnn_impl.cc  rnn_impl.h
src/llvm/: CMakeLists.txt  main.cc
src/node/: CMakeLists.txt  act_loss_node.cc  act_loss_node.h  activable.h  activation_node.cc  activation_node.h  activator.h  evaluable.h  feedable.h  identity_l2_node.cc  identity_l2_node.h  identity_node.cc  identity_node.h  input_node.h  internal_node.h  node.cc  node.h  node_edge_interface.h  node_factory.h  node_headers.h  node_parameter.h  node_registry.h  output_node.h  relu_node.cc  sigmoid_cross_entropy.cc  sigmoid_cross_entropy.h  sigmoid_input_node.cc  sigmoid_input_node.h  sigmoid_l2_node.cc  sigmoid_l2_node.h  sigmoid_node.cc  sigmoid_node.h  softmax_log_node.cc  softmax_log_node.h  tanh_node.cc  tanh_node.h
src/node/old_version/: act_loss_node.cc  act_loss_node.h  activation_node.cc  activation_node.h  node_edge_interface.h  output_node.h  sigmoid_input_node.cc  sigmoid_input_node.h
src/proto/: CMakeLists.txt  edge_parameter.proto  graph_parameter.proto  vertex_parameter.proto
src/solver/: CMakeLists.txt  ada_max.cc  ada_max.h  adadelta.cc  adadelta.h  adagrad.cc  adagrad.h  adam.cc  adam.h  gradient_decent.h  momentum.cc  momentum.h  sgd_solver.cc  sgd_solver.h  stochastic_gradient_decent.h
src/tensor/: CMakeLists.txt  dyn_matrix.cc  dyn_matrix.h
src/transformer/: CMakeLists.txt  internal_representation.h
src/utility/: CMakeLists.txt  auxiliary_cpp.h  common.cc  common.h  ipow.h  nl_random.cc  random.cc  random.h  registry.h  system.h
src/visitor/: CMakeLists.txt  backward_visitor.cc  backward_visitor.h  backward_visitor_test.cc  forward_visitor.cc  forward_visitor.h  forward_visitor_test.cc  init_vertex_visitor.cc  init_vertex_visitor.h  init_vertex_visitor_test.cc  normal_init_visitor.cc  normal_init_visitor.h  resize_vertex_visitor.cc  resize_vertex_visitor.h
template license/: README_template.md
test/: CMakeLists.txt
test/src/edge/: edge_tests.cc
test/src/node/: mock_sigmoid_node.h  node_parameter_tests.cc  node_tests.cc
