#cmake_minimum_required(VERSION 3.2)
#project(intellgraph_tests)

#add_subdirectory(lib/googletest)

#include_directories(lib/googletest/googletest/include)

#set(SOURCE_FILES main.cpp src/node/node_tests.cc src/node/node_parameter_tests.cc src/edge/edge_tests.cc)

#add_executable(intellgraph_tests ${SOURCE_FILES})
#target_link_libraries(intellgraph_tests node edge gtest)
#install(TARGETS intellgraph_tests DESTINATION bin)


